Upgrade to Java 8
Java 7 is already end of life since April 2015.
Java 8 does not support MaxPermSize anymore, therefore removing this setting.